--- a/17.bsTest.ipynb
+++ b/17.bsTest.ipynb
@@ -59,8 +59,207 @@
    ],
    "source": [
     "fp = open( 'data/song.xml' )\n",
-    "kpop = BeautifulSoup( fp, 'html.parser' ) # 문자열 --> element 객체로 변환\n",
+    "# 문자열 --> element 객체로 변환 후 root element 를 반환\n",
+    "kpop = BeautifulSoup( fp, 'html.parser' ) \n",
     "kpop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slist>\n",
+       "<song album=\"album1\">\n",
+       "<singer>singer1</singer>\n",
+       "<title>title1</title>\n",
+       "</song>\n",
+       "<song album=\"album2\">\n",
+       "<singer>singer2</singer>\n",
+       "<title>title2</title>\n",
+       "</song>\n",
+       "<song album=\"album3\">\n",
+       "<singer>singer3</singer>\n",
+       "<title>title3</title>\n",
+       "</song>\n",
+       "</slist>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kpop.slist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<song album=\"album1\">\n",
+       "<singer>singer1</singer>\n",
+       "<title>title1</title>\n",
+       "</song>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kpop.song"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<slist>\n",
+       " <song album=\"album1\">\n",
+       " <singer>singer1</singer>\n",
+       " <title>title1</title>\n",
+       " </song>\n",
+       " <song album=\"album2\">\n",
+       " <singer>singer2</singer>\n",
+       " <title>title2</title>\n",
+       " </song>\n",
+       " <song album=\"album3\">\n",
+       " <singer>singer3</singer>\n",
+       " <title>title3</title>\n",
+       " </song>\n",
+       " </slist>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# kpop.select(\"selector\")\n",
+    "kpop.select('slist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slist>\n",
+       "<song album=\"album1\">\n",
+       "<singer>singer1</singer>\n",
+       "<title>title1</title>\n",
+       "</song>\n",
+       "<song album=\"album2\">\n",
+       "<singer>singer2</singer>\n",
+       "<title>title2</title>\n",
+       "</song>\n",
+       "<song album=\"album3\">\n",
+       "<singer>singer3</singer>\n",
+       "<title>title3</title>\n",
+       "</song>\n",
+       "</slist>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kpop.select_one('slist')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<song album=\"album1\">\n",
+       "<singer>singer1</singer>\n",
+       "<title>title1</title>\n",
+       "</song>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kpop.select_one('song') # kpop.song"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'singer1'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kpop.singer.string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "album1\n",
+      "singer1\n",
+      "title1\n",
+      "=======\n",
+      "album2\n",
+      "singer2\n",
+      "title2\n",
+      "=======\n",
+      "album3\n",
+      "singer3\n",
+      "title3\n",
+      "=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "for song in kpop.select('song'):\n",
+    "    print(song['album'])\n",
+    "    print(song.singer.string)\n",
+    "    print(song.title.string)\n",
+    "    print('=======')"
    ]
   },
   {
