--- a/23. 멀티인덱스 컬럼.ipynb
+++ b/23. 멀티인덱스 컬럼.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "       [43, 39, 37, 93, 91, 52]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "3  43  39  37  93  91  52"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -179,45 +179,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>67</td>\n",
-       "      <td>42</td>\n",
-       "      <td>39</td>\n",
-       "      <td>35</td>\n",
-       "      <td>94</td>\n",
-       "      <td>46</td>\n",
+       "      <td>87</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "      <td>38</td>\n",
+       "      <td>43</td>\n",
        "      <td>2018</td>\n",
        "      <td>1반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>31</td>\n",
-       "      <td>36</td>\n",
-       "      <td>55</td>\n",
-       "      <td>80</td>\n",
-       "      <td>50</td>\n",
-       "      <td>48</td>\n",
+       "      <td>77</td>\n",
+       "      <td>60</td>\n",
+       "      <td>33</td>\n",
+       "      <td>100</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79</td>\n",
        "      <td>2018</td>\n",
        "      <td>2반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>41</td>\n",
-       "      <td>58</td>\n",
-       "      <td>59</td>\n",
-       "      <td>44</td>\n",
-       "      <td>80</td>\n",
+       "      <td>87</td>\n",
+       "      <td>33</td>\n",
        "      <td>98</td>\n",
+       "      <td>54</td>\n",
+       "      <td>73</td>\n",
+       "      <td>56</td>\n",
        "      <td>2019</td>\n",
        "      <td>1반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>43</td>\n",
-       "      <td>39</td>\n",
-       "      <td>37</td>\n",
-       "      <td>93</td>\n",
-       "      <td>91</td>\n",
-       "      <td>52</td>\n",
+       "      <td>82</td>\n",
+       "      <td>71</td>\n",
+       "      <td>45</td>\n",
+       "      <td>94</td>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
        "      <td>2019</td>\n",
        "      <td>2반</td>\n",
        "    </tr>\n",
@@ -226,14 +226,14 @@
        "</div>"
       ],
       "text/plain": [
-       "    0   1   2   3   4   5    년도   반\n",
-       "0  67  42  39  35  94  46  2018  1반\n",
-       "1  31  36  55  80  50  48  2018  2반\n",
-       "2  41  58  59  44  80  98  2019  1반\n",
-       "3  43  39  37  93  91  52  2019  2반"
+       "    0   1   2    3   4   5    년도   반\n",
+       "0  87  31  30   90  38  43  2018  1반\n",
+       "1  77  60  33  100  51  79  2018  2반\n",
+       "2  87  33  98   54  73  56  2019  1반\n",
+       "3  82  71  45   94  98  55  2019  2반"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -293,55 +293,55 @@
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2018</th>\n",
        "      <th>1반</th>\n",
-       "      <td>67</td>\n",
-       "      <td>42</td>\n",
-       "      <td>39</td>\n",
-       "      <td>35</td>\n",
-       "      <td>94</td>\n",
-       "      <td>46</td>\n",
+       "      <td>87</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "      <td>38</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2반</th>\n",
-       "      <td>31</td>\n",
-       "      <td>36</td>\n",
-       "      <td>55</td>\n",
-       "      <td>80</td>\n",
-       "      <td>50</td>\n",
-       "      <td>48</td>\n",
+       "      <td>77</td>\n",
+       "      <td>60</td>\n",
+       "      <td>33</td>\n",
+       "      <td>100</td>\n",
+       "      <td>51</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
        "      <th>1반</th>\n",
-       "      <td>41</td>\n",
-       "      <td>58</td>\n",
-       "      <td>59</td>\n",
-       "      <td>44</td>\n",
-       "      <td>80</td>\n",
+       "      <td>87</td>\n",
+       "      <td>33</td>\n",
        "      <td>98</td>\n",
+       "      <td>54</td>\n",
+       "      <td>73</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2반</th>\n",
-       "      <td>43</td>\n",
-       "      <td>39</td>\n",
-       "      <td>37</td>\n",
-       "      <td>93</td>\n",
-       "      <td>91</td>\n",
-       "      <td>52</td>\n",
+       "      <td>82</td>\n",
+       "      <td>71</td>\n",
+       "      <td>45</td>\n",
+       "      <td>94</td>\n",
+       "      <td>98</td>\n",
+       "      <td>55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          0   1   2   3   4   5\n",
-       "년도   반                         \n",
-       "2018 1반  67  42  39  35  94  46\n",
-       "     2반  31  36  55  80  50  48\n",
-       "2019 1반  41  58  59  44  80  98\n",
-       "     2반  43  39  37  93  91  52"
+       "          0   1   2    3   4   5\n",
+       "년도   반                          \n",
+       "2018 1반  87  31  30   90  38  43\n",
+       "     2반  77  60  33  100  51  79\n",
+       "2019 1반  87  33  98   54  73  56\n",
+       "     2반  82  71  45   94  98  55"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -368,29 +368,36 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>년도</th>\n",
-       "      <th>반</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">홍길동</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">이순신</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">임꺽정</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>년도</th>\n",
        "      <th>반</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -409,8 +416,6 @@
        "      <td>35</td>\n",
        "      <td>94</td>\n",
        "      <td>46</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2반</th>\n",
@@ -420,8 +425,6 @@
        "      <td>80</td>\n",
        "      <td>50</td>\n",
        "      <td>48</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
@@ -432,8 +435,6 @@
        "      <td>44</td>\n",
        "      <td>80</td>\n",
        "      <td>98</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1반</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2반</th>\n",
@@ -443,23 +444,22 @@
        "      <td>93</td>\n",
        "      <td>91</td>\n",
        "      <td>52</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2반</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          0   1   2   3   4   5    년도   반\n",
-       "년도   반                                   \n",
-       "2018 1반  67  42  39  35  94  46  2018  1반\n",
-       "     2반  31  36  55  80  50  48  2018  2반\n",
-       "2019 1반  41  58  59  44  80  98  2019  1반\n",
-       "     2반  43  39  37  93  91  52  2019  2반"
+       "        홍길동     이순신     임꺽정    \n",
+       "         국어  영어  국어  영어  국어  영어\n",
+       "년도   반                         \n",
+       "2018 1반  67  42  39  35  94  46\n",
+       "     2반  31  36  55  80  50  48\n",
+       "2019 1반  41  58  59  44  80  98\n",
+       "     2반  43  39  37  93  91  52"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "           names=['년도', '반'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "Int64Index([2018, 2019], dtype='int64', name='년도')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -524,13 +524,298 @@
        "Index(['1반', '2반'], dtype='object', name='반')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.index.levels[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([2018, 2018, 2019, 2019], dtype='int64', name='년도')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index.get_level_values(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['1반', '2반', '1반', '2반'], dtype='object', name='반')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.index.get_level_values(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = pd.MultiIndex.from_product([['홍길동','이순신','임꺽정'], ['국어','영어'] ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">홍길동</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">이순신</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">임꺽정</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>년도</th>\n",
+       "      <th>반</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2018</th>\n",
+       "      <th>1반</th>\n",
+       "      <td>67</td>\n",
+       "      <td>42</td>\n",
+       "      <td>39</td>\n",
+       "      <td>35</td>\n",
+       "      <td>94</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2반</th>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>55</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2019</th>\n",
+       "      <th>1반</th>\n",
+       "      <td>41</td>\n",
+       "      <td>58</td>\n",
+       "      <td>59</td>\n",
+       "      <td>44</td>\n",
+       "      <td>80</td>\n",
+       "      <td>98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2반</th>\n",
+       "      <td>43</td>\n",
+       "      <td>39</td>\n",
+       "      <td>37</td>\n",
+       "      <td>93</td>\n",
+       "      <td>91</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        홍길동     이순신     임꺽정    \n",
+       "         국어  영어  국어  영어  국어  영어\n",
+       "년도   반                         \n",
+       "2018 1반  67  42  39  35  94  46\n",
+       "     2반  31  36  55  80  50  48\n",
+       "2019 1반  41  58  59  44  80  98\n",
+       "     2반  43  39  37  93  91  52"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">홍길동</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">이순신</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">임꺽정</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "      <th>국어</th>\n",
+       "      <th>영어</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>반</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1반</th>\n",
+       "      <td>67</td>\n",
+       "      <td>42</td>\n",
+       "      <td>39</td>\n",
+       "      <td>35</td>\n",
+       "      <td>94</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2반</th>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>55</td>\n",
+       "      <td>80</td>\n",
+       "      <td>50</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   홍길동     이순신     임꺽정    \n",
+       "    국어  영어  국어  영어  국어  영어\n",
+       "반                         \n",
+       "1반  67  42  39  35  94  46\n",
+       "2반  31  36  55  80  50  48"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[2018]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "년도    반 \n",
+       "2018  1반    67\n",
+       "      2반    31\n",
+       "2019  1반    41\n",
+       "      2반    43\n",
+       "Name: 국어, dtype: int32"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['홍길동']['국어']"
    ]
   },
   {
