--- a/23. 멀티인덱스 컬럼.ipynb
+++ b/23. 멀티인덱스 컬럼.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "       [43, 39, 37, 93, 91, 52]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "3  43  39  37  93  91  52"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -368,32 +368,21 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
+       "    .dataframe thead th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">홍길동</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">이순신</th>\n",
-       "      <th colspan=\"2\" halign=\"left\">임꺽정</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>국어</th>\n",
-       "      <th>영어</th>\n",
-       "      <th>국어</th>\n",
-       "      <th>영어</th>\n",
-       "      <th>국어</th>\n",
-       "      <th>영어</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>년도</th>\n",
@@ -450,8 +439,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        홍길동     이순신     임꺽정    \n",
-       "         국어  영어  국어  영어  국어  영어\n",
+       "          0   1   2   3   4   5\n",
        "년도   반                         \n",
        "2018 1반  67  42  39  35  94  46\n",
        "     2반  31  36  55  80  50  48\n",
@@ -459,7 +447,7 @@
        "     2반  43  39  37  93  91  52"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
